# robotnik_trajectory_control

./: CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
config/: device_command_interfaces.yaml  fake_joint_state_pub.yaml
config/grippers/: rb1_gripper_interface.yaml
launch/: control_trajectory_manager.launch  fake_joint_state_publisher.launch  rt_sim_trajectory.launch
launch/grippers/: rb1_gripper_controller.launch
msg/: Actions.msg  State.msg  SubcomponentState.msg
src/robotnik_trajectory_control/: pub_joint_states.py  rt_gripper_exe.py  rt_sim_traj_exe.py  rt_traj_exe.py
src/robotnik_trajectory_control/gripper_interfaces/: gripper_interface.py  rb1_gripper_interface.py
src/robotnik_trajectory_control/interfaces/: device_command_interface.py  gazebo_command_interface.py  ipa_canopen_command_interface.py  kinova_command_interface.py
src/robotnik_trajectory_control/tests/: get_traj_params_test.py  pub_joint_states.py  send_grippercommand_test.py  send_head_pw70_command_interface.py  send_powerball_command_interface.py  send_rb1_traj_test.py  send_real_traj_goal_test.py  send_traj_goal_test.py
srv/: GetJointsLimits.srv  TrajExecActions.srv
